<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="44dp">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1.1"
        android:text="@string/car_home_fault_code"
        android:textSize="14dp"
        android:layout_gravity="left|center_vertical"
        android:paddingLeft="4dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:gravity="left"
        android:textColor="#FF090909"
        android:id="@+id/home_car_fault_code"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#FFF1F1F1"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="3.5"
        android:text="@string/car_home_fault_catelog"
        android:textSize="14dp"
        android:layout_gravity="left|center_vertical"
        android:gravity="left"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginLeft="20dp"
        android:textColor="#FF090909"
        android:id="@+id/home_car_fault_catelog"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#FFF1F1F1"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1.1"
        android:text="@string/car_home_fault_brand"
        android:id="@+id/car_home_fault_brand"
        android:textSize="14dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_gravity="left|center_vertical"
        android:gravity="center"
        android:textColor="#FF090909"
        android:layout_height="wrap_content"/>
</LinearLayout>