<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="270dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/recycler_item_home_car_shape"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:textColor="#FFF76565"
        android:textStyle="bold"
        android:textSize="16dp"
        android:id="@+id/home_car_driving_price"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/home_car_driving_price"
        app:layout_constraintTop_toBottomOf="@+id/home_car_driving_price"
        android:layout_marginTop="20dp"
        android:textColor="#FF666666"
        android:text="@string/car_home_driving_start_time"
        android:textSize="14dp"
        android:id="@+id/home_car_driving_start"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/home_car_driving_start"
        android:textColor="#FF666666"
        android:textSize="14dp"
        android:id="@+id/home_car_driving_distance"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/home_car_driving_start"
        app:layout_constraintTop_toTopOf="@+id/home_car_driving_start"
        android:textColor="#FF090909"
        android:textSize="14dp"
        android:id="@+id/home_car_driving_start_time"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/home_car_driving_start"
        app:layout_constraintTop_toBottomOf="@+id/home_car_driving_start"
        android:layout_marginTop="20dp"
        android:text="@string/car_home_driving_start_point"
        android:textColor="#FF666666"
        android:textSize="14dp"
        android:id="@+id/home_car_driving_area"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/home_car_driving_area"
        app:layout_constraintTop_toTopOf="@+id/home_car_driving_area"
        android:textColor="#FF090909"
        android:textSize="14dp"
        android:id="@+id/home_car_driving_start_area"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/home_car_driving_area"
        app:layout_constraintTop_toBottomOf="@+id/home_car_driving_area"
        android:layout_marginTop="20dp"
        android:text="@string/car_home_driving_end_point"
        android:textColor="#FF666666"
        android:textSize="14dp"
        android:id="@+id/home_car_driving_destination"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/home_car_driving_destination"
        app:layout_constraintTop_toTopOf="@+id/home_car_driving_destination"
        android:textColor="#FF090909"
        android:textSize="14dp"
        android:id="@+id/home_car_driving_end_destination"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/home_car_driving_destination"
        app:layout_constraintTop_toBottomOf="@+id/home_car_driving_destination"
        android:layout_marginTop="20dp"
        android:textColor="#FF666666"
        android:text="@string/home_car_driving_journey"
        android:textSize="14dp"
        android:id="@+id/home_car_driving_journey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/home_car_driving_journey"
        app:layout_constraintTop_toTopOf="@+id/home_car_driving_journey"
        android:textColor="#FF090909"
        android:textSize="14dp"
        android:id="@+id/home_car_driving_journey_detail"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/home_car_driving_journey"
        android:layout_marginTop="20dp"
        android:background="@drawable/recycler_item_home_car_driving_btn_shape"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        android:textSize="16dp"
        android:gravity="center"
        android:text="@string/car_home_driving_order_receiving"
        android:id="@+id/home_car_driving_click"/>

</androidx.constraintlayout.widget.ConstraintLayout>