<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="20dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/recycler_item_home_car_shape"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:textColor="#FF666666"
        android:textSize="14dp"
        android:text="@string/home_car_service_brand"
        android:id="@+id/home_car_service_brand"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/home_car_service_brand"
        app:layout_constraintTop_toTopOf="@+id/home_car_service_brand"
        android:textColor="#FF090909"
        android:textSize="14dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/home_car_service_brand_detail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/home_car_service_brand"
        app:layout_constraintStart_toStartOf="@+id/home_car_service_brand"
        android:textColor="#FF666666"
        android:layout_marginTop="4dp"
        android:textSize="14dp"
        android:text="@string/home_car_service_vehicle_model"
        android:id="@+id/home_car_service_vehicle_model"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/home_car_service_vehicle_model"
        app:layout_constraintTop_toTopOf="@+id/home_car_service_vehicle_model"
        android:textColor="#FF090909"
        android:textSize="14dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/home_car_service_vehicle_model_detail"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/home_car_service_vehicle_model"
        android:src="@drawable/arrow_right"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/home_car_service_vehicle_model"
        app:layout_constraintStart_toStartOf="@+id/home_car_service_vehicle_model"
        android:textColor="#FF666666"
        android:textSize="14dp"
        android:text="@string/home_car_service_error_description"
        android:id="@+id/home_car_service_error_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/home_car_service_error_description"
        app:layout_constraintTop_toTopOf="@+id/home_car_service_error_description"
        android:textColor="#FF090909"
        android:textSize="14dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/home_car_service_error_description_detail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/home_car_service_error_description"
        app:layout_constraintStart_toStartOf="@+id/home_car_service_vehicle_model"
        android:textColor="#FF666666"
        android:textSize="14dp"
        android:id="@+id/home_car_service_sts"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/home_car_service_error_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_car_service_sts"
        android:textColor="#FF666666"
        android:textSize="14dp"
        android:id="@+id/home_car_service_price"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/home_car_service_sts"
        android:background="@drawable/recycler_item_home_car_driving_btn_shape"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        android:textSize="16dp"
        android:gravity="center"
        android:text="@string/car_home_driving_order_receiving"
        android:id="@+id/home_car_service_click"/>

</androidx.constraintlayout.widget.ConstraintLayout>